# QQwing-client

./: Makefile  Makefile.am  QQwing_client.cpp  QQwing_client.hpp  QQwing_client.vala  QQwing_client.vapi  QQwing_wrapper.cpp  QQwing_wrapper.h  README.md  client.vala
